<resources>
    <string name="app_name">Cinema</string>
    <string name="movies">Movies</string>
    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="label_movie_detail">Movie Detail</string>
    <string name="label_tv_detail">TV Detail</string>
    <string name="tv">Tv</string>
    <string name="favorite">Favorite</string>
    <string name="title">Movie Title</string>
    <string name="dateline">16 August, 2021</string>
    <string name="vote_average">9.0</string>
    <string name="category">Category</string>
    <string name="releasedate">Release Date</string>
    <string name="duration">Duration</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="overview">Overview</string>
    <string name="share">Share</string>
    <string name="cast">Cast</string>
    <string name="share_text">Watch %s only on your favorite cinema</string>
    <string name="image_path">https://image.tmdb.org/t/p/w500/%s</string>
    <string name="share_description">Share this app</string>
    <string name="sort_latest">Latest</string>
    <string name="sort_old">Old</string>
    <string name="sort_random">Random</string>
    <string name="title_favorite">Favorite</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_movie">Movie</string>
    <string name="label_tv">Tv</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_detail_movie">Detail Movie</string>
    <string name="label_detail_tv">Detail Tv</string>
    <string name="label_movie_videos">Movie Videos</string>
    <string name="please_wait">Please Wait . . .</string>
    <string name="no_review">No Review yet</string>
</resources>