<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movies"
    app:startDestination="@id/movieFragment">

    <fragment
        android:id="@+id/movieFragment"
        android:name="com.bwx.made.ui.movies.MoviesFragment"
        android:label="@string/label_movie"
        tools:layout="@layout/fragment_movies">
        <action
            android:id="@+id/action_movie_to_detail_movie"
            app:destination="@id/detailMovieFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailMovieFragment"
        android:name="com.bwx.made.ui.detail_movie.DetailMovieFragment"
        android:label="@string/label_detail_movie"
        tools:layout="@layout/fragment_detail_movie">
        <action
            android:id="@+id/action_detail_movie_to_movie_video"
            app:destination="@+id/movieVideoFragment" />
        <deepLink app:uri="android-app://com.bwx.made/detail_movie/{movie_key}/{movie_overview}" />
        <argument
            android:name="movie_key"
            app:argType="integer" />
        <argument
            android:name="movie_overview"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/movieVideoFragment"
        android:name="com.bwx.made.ui.movie_videos.MovieVideosFragment"
        android:label="@string/label_movie_videos"
        tools:layout="@layout/fragment_movie_videos" />

</navigation>